# bitcoin-explorer

./: .gitignore  create_db.py  docker-compose.yml  package.json
.github/workflows/: ci.yml
bitcoin_data_ingestion/: Cargo.toml  Dockerfile  index.js  package-lock.json  package.json
bitcoin_data_ingestion/src/: main.rs
bitcoin_explorer_ui/: Dockerfile  package-lock.json  package.json
bitcoin_explorer_ui/src/: App.tsx
