[package]
name = "bitcoin_data_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.28"
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "bitcoin_data_ingestion"
path = "src/main.rs"